tests/lean/1057.lean.expected.out
1057.lean:8:2-9:28: error: Dependent elimination failed: Type mismatch when solving alternative with type
  motive t Int
but expected
  motive t xâœ
